# additems

./: CMakeLists.txt  README.md  library.h  license  license.apache  qrvec.cpp  qrvec.h
exports/add/blur/: flyfire.bas
exports/add/check/: MemberTypeMap_t.cc  RRangeCast.cc  link.cc
exports/add/items/: qrpvec.cpp  qrpvec.h
exports/add/items/lasturl/: https.cpp  https.h
